--- a/index.html
+++ b/index.html
@@ -2,26 +2,33 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>SOS - Amigo Fiel</title>
+
+    <link rel="manifest" href="/manifest.json">
+    <meta name="theme-color" content="#0084ff">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <link rel="apple-touch-icon" href="https://cdn-icons-png.flaticon.com/512/3774/3774299.png">
+
     <style>
-        /* Layout preservado conforme suas imagens */
-        body { font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; background-color: #f0f4f8; margin: 0; display: flex; flex-direction: column; height: 100vh; }
+        /* Layout original preservado conforme imagens */
+        body { font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; background-color: #f0f4f8; margin: 0; display: flex; flex-direction: column; height: 100vh; overflow: hidden; }
         
-        .header { background-color: #0084ff; color: white; padding: 15px; display: flex; justify-content: space-between; align-items: center; font-weight: bold; position: sticky; top: 0; z-index: 100; }
-        .btn-ajuda { background-color: red; color: white; border: none; padding: 8px 12px; border-radius: 5px; font-size: 12px; font-weight: bold; cursor: pointer; }
+        .header { background-color: #0084ff; color: white; padding: 15px; display: flex; justify-content: space-between; align-items: center; font-weight: bold; box-shadow: 0 2px 5px rgba(0,0,0,0.1); }
+        .btn-ajuda { background-color: red; color: white; border: none; padding: 8px 12px; border-radius: 5px; font-size: 11px; font-weight: bold; cursor: pointer; line-height: 1.2; text-align: center; }
 
         #chat-container { flex: 1; overflow-y: auto; padding: 15px; display: flex; flex-direction: column; gap: 12px; scroll-behavior: smooth; }
         
-        .mensagem { padding: 12px 16px; border-radius: 18px; max-width: 85%; line-height: 1.4; font-size: 15px; }
-        .bot { align-self: flex-start; background-color: white; color: #333; border: 1px solid #e0e0e0; box-shadow: 0 2px 4px rgba(0,0,0,0.05); }
-        .user { align-self: flex-end; background-color: #0084ff; color: white; }
+        .mensagem { padding: 12px 16px; border-radius: 18px; max-width: 85%; line-height: 1.4; font-size: 15px; word-wrap: break-word; }
+        .bot { align-self: flex-start; background-color: white; color: #333; border: 1px solid #e0e0e0; box-shadow: 0 2px 4px rgba(0,0,0,0.05); border-bottom-left-radius: 2px; }
+        .user { align-self: flex-end; background-color: #0084ff; color: white; border-bottom-right-radius: 2px; }
 
-        .opcoes-container { display: flex; flex-direction: column; gap: 8px; padding: 10px 15px; }
-        .btn-opcao { background-color: #2196f3; color: white; border: none; padding: 12px; border-radius: 25px; font-weight: 500; cursor: pointer; text-align: center; }
+        .opcoes-container { display: flex; flex-direction: column; gap: 8px; padding: 10px 15px; background: #f0f4f8; }
+        .btn-opcao { background-color: #2196f3; color: white; border: none; padding: 12px; border-radius: 25px; font-weight: 500; cursor: pointer; text-align: center; font-size: 14px; }
 
-        .input-container { padding: 15px; background: #f0f4f8; display: flex; align-items: center; gap: 10px; }
-        input { flex: 1; padding: 12px 20px; border: 1px solid #ddd; border-radius: 30px; outline: none; background: white; }
+        .input-container { padding: 15px; background: white; display: flex; align-items: center; gap: 10px; border-top: 1px solid #eee; }
+        input { flex: 1; padding: 12px 20px; border: 1px solid #ddd; border-radius: 30px; outline: none; font-size: 16px; }
         .btn-enviar { background-color: #0084ff; color: white; border: none; width: 45px; height: 45px; border-radius: 50%; display: flex; align-items: center; justify-content: center; cursor: pointer; }
     </style>
 </head>
@@ -29,24 +36,24 @@
 
     <div class="header">
         <span>SOS - Amigo Fiel</span>
-        <button class="btn-ajuda">AJUDA AGORA<br><small>Centro de Valorização da Vida</small></button>
+        <button class="btn-ajuda" onclick="window.open('https://cvv.org.br/', '_blank')">AJUDA AGORA<br>Centro de Valorização da Vida</button>
     </div>
 
     <div id="chat-container">
         <div class="mensagem bot">
             Olá! Que bom que você veio. Eu sou o Amigo Fiel e estou aqui para ouvir, sem pressa e sem julgamento. 
-            Como você está se sentindo hoje? Se quiser, pode me contar o que está no seu coração.
+            Como você está se sentindo hoje?
         </div>
     </div>
 
     <div class="opcoes-container">
-        <button class="btn-opcao" onclick="window.location.href='#'">Posso te direcionar para uma igreja? Temos pequenos grupos</button>
-        <button class="btn-opcao" onclick="window.location.href='#'">Psicólogo (Particular)</button>
+        <button class="btn-opcao">Posso te direcionar para uma igreja? Temos pequenos grupos</button>
+        <button class="btn-opcao">Psicólogo (Particular)</button>
     </div>
 
     <div class="input-container">
-        <input type="text" id="user-input" placeholder="Escreva aqui..." onkeypress="if(event.key === 'Enter') enviar()">
-        <button class="btn-enviar" onclick="enviar()">
+        <input type="text" id="user-input" placeholder="Escreva aqui..." autocomplete="off">
+        <button class="btn-enviar" id="send-btn">
             <svg viewBox="0 0 24 24" width="24" height="24" fill="currentColor"><path d="M2.01 21L23 12 2.01 3 2 10l15 2-15 2z"></path></svg>
         </button>
     </div>
@@ -54,12 +61,13 @@
     <script>
         const chatContainer = document.getElementById('chat-container');
         const userInput = document.getElementById('user-input');
+        const sendBtn = document.getElementById('send-btn');
 
-        // FUNÇÃO QUE FAZ AS LETRAS SUBIREM SOZINHAS
-        function rolarParaBaixo() {
+        // FUNÇÃO DE ROLAGEM AUTOMÁTICA
+        function scrollToBottom() {
             setTimeout(() => {
                 chatContainer.scrollTop = chatContainer.scrollHeight;
-            }, 100);
+            }, 50);
         }
 
         async function enviar() {
@@ -68,7 +76,7 @@
 
             adicionarMensagem(texto, 'user');
             userInput.value = '';
-            rolarParaBaixo();
+            scrollToBottom();
 
             try {
                 const response = await fetch('/api/chat', {
@@ -79,10 +87,10 @@
 
                 const data = await response.json();
                 adicionarMensagem(data.resposta, 'bot');
-                rolarParaBaixo();
+                scrollToBottom();
             } catch (error) {
-                adicionarMensagem("Estou aqui te ouvindo. Pode repetir o que disse?", 'bot');
-                rolarParaBaixo();
+                adicionarMensagem("Estou aqui com você. Pode repetir?", 'bot');
+                scrollToBottom();
             }
         }
 
@@ -92,6 +100,9 @@
             div.innerText = texto;
             chatContainer.appendChild(div);
         }
+
+        sendBtn.addEventListener('click', enviar);
+        userInput.addEventListener('keypress', (e) => { if(e.key === 'Enter') enviar(); });
     </script>
 </body>
 </html>
