--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="theme-color" content="#0084ff">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-    <link rel="apple-touch-icon" href="https://cdn-icons-png.flaticon.com/512/3774/3774299.png">
+    <link rel="apple-touch-icon" href="amigofiel.png">
 
     <style>
         /* Layout original preservado conforme imagens */
@@ -106,3 +106,4 @@
     </script>
 </body>
 </html>
+
