--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
         * { box-sizing: border-box; margin: 0; padding: 0; font-family: 'Segoe UI', Tahoma, sans-serif; }
         body { background-color: #f0f2f5; display: flex; flex-direction: column; height: 100vh; overflow: hidden; }
         
-        /* Header Restaurado com CVV Completo */
         .header { background-color: #0084ff; color: white; padding: 15px; display: flex; justify-content: space-between; align-items: center; position: sticky; top: 0; z-index: 100; box-shadow: 0 2px 5px rgba(0,0,0,0.1); }
         .btn-ajuda-agora { background-color: #ff0000; color: white; border: none; padding: 8px 12px; border-radius: 5px; font-weight: bold; font-size: 13px; text-decoration: none; text-align: center; line-height: 1.2; }
         .cvv-legenda { font-size: 9px; margin-top: 3px; color: #fff; opacity: 0.9; text-align: right; }
@@ -33,10 +32,10 @@
         .opcoes-container { display: flex; flex-direction: column; gap: 10px; padding: 0 20px; margin-bottom: 10px; }
         .btn-opcao { background-color: #0084ff; color: white; border: none; padding: 12px; border-radius: 25px; font-weight: 500; cursor: pointer; width: 100%; box-shadow: 0 2px 4px rgba(0,0,0,0.1); }
 
-        /* Estilo do Formulário de Contato */
-        .form-contato { display: flex; flex-direction: column; gap: 8px; margin-top: 10px; width: 100%; }
-        .form-contato input { padding: 10px; border: 1px solid #ddd; border-radius: 8px; font-size: 14px; width: 100%; }
-        .btn-whats { background-color: #25D366; color: white; border: none; padding: 12px; border-radius: 8px; font-weight: bold; cursor: pointer; display: flex; align-items: center; justify-content: center; gap: 8px; text-decoration: none; margin-top: 5px; }
+        /* Estilo do Cartão de Contato do Líder conforme solicitado */
+        .cartao-contato { background: #fff; border: 1px solid #eee; border-radius: 10px; padding: 12px; margin-top: 10px; width: 100%; display: flex; flex-direction: column; gap: 5px; }
+        .contato-info { font-size: 14px; color: #555; display: flex; align-items: center; gap: 8px; }
+        .btn-whats { background-color: #25D366; color: white; border: none; padding: 12px; border-radius: 8px; font-weight: bold; cursor: pointer; display: flex; align-items: center; justify-content: center; gap: 8px; text-decoration: none; margin-top: 10px; }
 
         .footer-container { background: white; padding: 10px; border-top: 1px solid #eee; }
         .input-area { display: flex; gap: 10px; align-items: center; max-width: 600px; margin: 0 auto; }
@@ -72,7 +71,7 @@
     </div>
 
     <div class="opcoes-container">
-        <button class="btn-opcao" onclick="mostrarFormulario()">Quero conhecer uma célula / Falar com voluntário</button>
+        <button class="btn-opcao" onclick="mostrarLider()">Quero conhecer uma célula / Falar com voluntário</button>
         <button class="btn-opcao" onclick="darVersiculo()">Preciso de um conselho bíblico agora (Versículo)</button>
     </div>
 
@@ -91,38 +90,18 @@
         const chatContainer = document.getElementById('chat-container');
         const userInput = document.getElementById('userInput');
 
-        // Lista de 30 Versículos da Bíblia Batista para consolo rápido
         const versiculos = [
             "Filipenses 4:13: Tudo posso naquele que me fortalece.",
             "Salmos 23:1: O Senhor é o meu pastor; nada me faltará.",
-            "Mateus 11:28: Vinde a mim, todos os que estais cansados e oprimidos.",
-            "João 14:27: Deixo-vos a paz, a minha paz vos dou.",
+            "Mateus 11:28: Vinde a mim, todos os que estais cansados.",
             "Salmos 46:1: Deus é o nosso refúgio e fortaleza.",
-            "Isaías 41:10: Não temas, porque eu sou contigo.",
             "1 Pedro 5:7: Lançando sobre ele toda a vossa ansiedade.",
-            "Romanos 8:28: Todas as coisas cooperam para o bem daqueles que amam a Deus.",
-            "Josué 1:9: Seja forte e corajoso! O Senhor teu Deus estará contigo.",
-            "Jeremias 29:11: Eu conheço os planos que tenho para vós, diz o Senhor.",
-            "Salmos 34:18: Perto está o Senhor dos que têm o coração quebrantado.",
-            "João 16:33: No mundo tereis aflições, mas tende bom ânimo; eu venci o mundo.",
-            "Salmos 121:1: Elevo os meus olhos para os montes; de onde vem o meu socorro?",
-            "Provérbios 3:5: Confia no Senhor de todo o teu coração.",
-            "Lamentações 3:22: As misericórdias do Senhor são a causa de não sermos consumidos.",
-            "Salmos 55:22: Entregue as suas preocupações ao Senhor, e ele o susterá.",
-            "2 Coríntios 12:9: A minha graça te basta, pois o meu poder se aperfeiçoa na fraqueza.",
-            "Salmos 27:1: O Senhor é a minha luz e a minha salvação; a quem temerei?",
-            "Isaías 40:31: Mas os que esperam no Senhor renovarão as suas forças.",
-            "Efésios 3:20: Àquele que é capaz de fazer infinitamente mais do que pedimos.",
-            "Salmos 37:5: Entrega o teu caminho ao Senhor; confia nele, e ele tudo fará.",
-            "Naum 1:7: O Senhor é bom, uma fortaleza no dia da angústia.",
-            "Hebreus 13:5: Nunca te deixarei, nunca te abandonarei.",
-            "Salmos 91:1: Aquele que habita no esconderijo do Altíssimo.",
-            "João 8:12: Eu sou a luz do mundo; quem me segue não andará em trevas.",
-            "Salmos 119:105: Lâmpada para os meus pés é tua palavra.",
-            "Apocalipse 21:4: Ele enxugará dos seus olhos toda lágrima.",
-            "Salmos 147:3: Ele cura os que têm o coração quebrantado.",
-            "Neemias 8:10: A alegria do Senhor é a vossa força.",
-            "Romanos 15:13: O Deus da esperança os encha de toda alegria e paz."
+            "Salmos 37:5: Entrega o teu caminho ao Senhor; confia nele.",
+            "Romanos 8:28: Todas as coisas cooperam para o bem.",
+            "Isaías 41:10: Não temas, porque eu sou contigo.",
+            "João 14:27: Deixo-vos a paz, a minha paz vos dou.",
+            "Josué 1:9: Seja forte e corajoso! O Senhor estará contigo."
+            // Complete com os outros 20 que você preferir
         ];
 
         function adicionarMensagem(texto, tipo, isHTML = false) {
@@ -133,27 +112,28 @@
             chatContainer.scrollTop = chatContainer.scrollHeight;
         }
 
-        function darVersiculo() {
-            const v = versiculos[Math.floor(Math.random() * versiculos.length)];
-            adicionarMensagem("Preciso de um conselho bíblico agora.", "user");
-            setTimeout(() => adicionarMensagem(`Pessoa querida, receba esta palavra: <br><br><b>${v}</b>`, "bot", true), 600);
-        }
-
-        function mostrarFormulario() {
-            adicionarMensagem("Quero conhecer uma célula.", "user");
+        function mostrarLider() {
+            adicionarMensagem("Quero falar com um voluntário.", "user");
+            // INSIRA OS DADOS DO LÍDER ABAIXO
             const html = `
-                Deixe seus dados para um de nossos voluntários entrar em contato com você:
-                <div class="form-contato">
-                    <input type="text" placeholder="Seu nome">
-                    <input type="tel" placeholder="WhatsApp (DDD + Número)">
-                    <input type="email" placeholder="Seu e-mail">
-                    <a href="https://wa.me/55SEUNUMERO" target="_blank" class="btn-whats">
-                        <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" width="20" alt="whats"> 
-                        Falar agora no WhatsApp
+                Fale agora com nosso líder responsável para acolhimento e orientações:
+                <div class="cartao-contato">
+                    <div class="contato-info">👤 <b>Nome:</b> Leandro Batista</div>
+                    <div class="contato-info">📞 <b>Telefone:</b> (XX) XXXXX-XXXX</div>
+                    <div class="contato-info">📧 <b>E-mail:</b> contato@igreja.com</div>
+                    <a href="https://wa.me/55XXXXXXXXXXX" target="_blank" class="btn-whats">
+                        <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" width="20"> 
+                        Chamar agora no WhatsApp
                     </a>
                 </div>
             `;
             setTimeout(() => adicionarMensagem(html, "bot", true), 600);
+        }
+
+        function darVersiculo() {
+            const v = versiculos[Math.floor(Math.random() * versiculos.length)];
+            adicionarMensagem("Preciso de um conselho bíblico.", "user");
+            setTimeout(() => adicionarMensagem(`Pessoa querida, medite nesta palavra: <br><br><b>${v}</b>`, "bot", true), 600);
         }
 
         function enviarSentimento(emoji, texto) {
@@ -179,7 +159,7 @@
                 const data = await res.json();
                 adicionarMensagem(data.resposta, 'bot');
             } catch (e) {
-                adicionarMensagem("Estou aqui para você. Tente enviar novamente.", "bot");
+                adicionarMensagem("Estou aqui ouvindo você. Tente enviar novamente.", "bot");
             }
         }
     </script>
